--- a/src/output.css
+++ b/src/output.css
@@ -574,8 +574,8 @@ video {
   left: 0px;
 }
 
-.left-\[6rem\] {
-  left: 6rem;
+.left-\[4rem\] {
+  left: 4rem;
 }
 
 .right-0 {
@@ -584,22 +584,6 @@ video {
 
 .top-\[20px\] {
   top: 20px;
-}
-
-.left-\[5rem\] {
-  left: 5rem;
-}
-
-.left-\[4rem\] {
-  left: 4rem;
-}
-
-.left-\[3rem\] {
-  left: 3rem;
-}
-
-.left-\[rem\] {
-  left: rem;
 }
 
 .col-span-full {
@@ -703,12 +687,28 @@ video {
   height: 100svh;
 }
 
+.h-2 {
+  height: 0.5rem;
+}
+
+.h-3 {
+  height: 0.75rem;
+}
+
+.h-5 {
+  height: 1.25rem;
+}
+
 .min-h-\[100px\] {
   min-height: 100px;
 }
 
 .min-h-\[300px\] {
   min-height: 300px;
+}
+
+.min-h-\[520px\] {
+  min-height: 520px;
 }
 
 .min-h-screen {
@@ -739,8 +739,8 @@ video {
   width: 1.5rem;
 }
 
-.w-9\/12 {
-  width: 75%;
+.w-7\/12 {
+  width: 58.333333%;
 }
 
 .w-96 {
@@ -763,16 +763,17 @@ video {
   width: 100vw;
 }
 
-.w-8\/12 {
-  width: 66.666667%;
-}
-
-.w-7\/12 {
-  width: 58.333333%;
+.w-fit {
+  width: -moz-fit-content;
+  width: fit-content;
 }
 
 .max-w-\[1080px\] {
   max-width: 1080px;
+}
+
+.max-w-\[500px\] {
+  max-width: 500px;
 }
 
 .max-w-\[680px\] {
@@ -827,6 +828,10 @@ video {
   flex-direction: row;
 }
 
+.flex-col {
+  flex-direction: column;
+}
+
 .items-center {
   align-items: center;
 }
@@ -847,10 +852,28 @@ video {
   gap: 1rem;
 }
 
+.space-x-2 > :not([hidden]) ~ :not([hidden]) {
+  --tw-space-x-reverse: 0;
+  margin-right: calc(0.5rem * var(--tw-space-x-reverse));
+  margin-left: calc(0.5rem * calc(1 - var(--tw-space-x-reverse)));
+}
+
+.space-y-2 > :not([hidden]) ~ :not([hidden]) {
+  --tw-space-y-reverse: 0;
+  margin-top: calc(0.5rem * calc(1 - var(--tw-space-y-reverse)));
+  margin-bottom: calc(0.5rem * var(--tw-space-y-reverse));
+}
+
 .space-y-7 > :not([hidden]) ~ :not([hidden]) {
   --tw-space-y-reverse: 0;
   margin-top: calc(1.75rem * calc(1 - var(--tw-space-y-reverse)));
   margin-bottom: calc(1.75rem * var(--tw-space-y-reverse));
+}
+
+.space-x-4 > :not([hidden]) ~ :not([hidden]) {
+  --tw-space-x-reverse: 0;
+  margin-right: calc(1rem * var(--tw-space-x-reverse));
+  margin-left: calc(1rem * calc(1 - var(--tw-space-x-reverse)));
 }
 
 .overflow-hidden {
@@ -1004,6 +1027,10 @@ video {
   padding: 0.25rem;
 }
 
+.p-10 {
+  padding: 2.5rem;
+}
+
 .p-8 {
   padding: 2rem;
 }
@@ -1027,6 +1054,11 @@ video {
   padding-right: 18px;
 }
 
+.py-12 {
+  padding-top: 3rem;
+  padding-bottom: 3rem;
+}
+
 .py-2 {
   padding-top: 0.5rem;
   padding-bottom: 0.5rem;
@@ -1045,6 +1077,11 @@ video {
 .py-\[14px\] {
   padding-top: 14px;
   padding-bottom: 14px;
+}
+
+.px-\[\] {
+  padding-left: ;
+  padding-right: ;
 }
 
 .pr-0 {
@@ -1068,6 +1105,10 @@ video {
   font-size: 18px;
 }
 
+.text-\[28px\] {
+  font-size: 28px;
+}
+
 .text-\[40px\] {
   font-size: 40px;
 }
@@ -1086,12 +1127,16 @@ video {
   font-weight: 700;
 }
 
+.font-extrabold {
+  font-weight: 800;
+}
+
 .font-medium {
   font-weight: 500;
 }
 
-.font-extrabold {
-  font-weight: 800;
+.leading-10 {
+  line-height: 2.5rem;
 }
 
 .leading-7 {
@@ -1105,6 +1150,11 @@ video {
 .text-gray-300 {
   --tw-text-opacity: 1;
   color: rgb(209 213 219 / var(--tw-text-opacity, 1));
+}
+
+.text-greenLight {
+  --tw-text-opacity: 1;
+  color: rgb(97 206 166 / var(--tw-text-opacity, 1));
 }
 
 .text-lightBlue {
